; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_tmscsim.c_dc390_EnableMsgOut_Abort.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_tmscsim.c_dc390_EnableMsgOut_Abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc390_acb = type { i32 }
%struct.dc390_srb = type { i32, %struct.TYPE_2__*, i32* }
%struct.TYPE_2__ = type { i32 }

@ABORT = common dso_local global i32 0, align 4
@DC390_ENABLE_MSGOUT = common dso_local global i32 0, align 4
@ABORT_DEV_ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dc390_acb*, %struct.dc390_srb*)* @dc390_EnableMsgOut_Abort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dc390_EnableMsgOut_Abort(%struct.dc390_acb* %0, %struct.dc390_srb* %1) #0 {
  %3 = alloca %struct.dc390_acb*, align 8
  %4 = alloca %struct.dc390_srb*, align 8
  store %struct.dc390_acb* %0, %struct.dc390_acb** %3, align 8
  store %struct.dc390_srb* %1, %struct.dc390_srb** %4, align 8
  %5 = load i32, i32* @ABORT, align 4
  %6 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %7 = getelementptr inbounds %struct.dc390_srb, %struct.dc390_srb* %6, i32 0, i32 2
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  store i32 %5, i32* %9, align 4
  %10 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %11 = getelementptr inbounds %struct.dc390_srb, %struct.dc390_srb* %10, i32 0, i32 0
  store i32 1, i32* %11, align 8
  %12 = load i32, i32* @DC390_ENABLE_MSGOUT, align 4
  %13 = load i32, i32* @ABORT_DEV_, align 4
  %14 = xor i32 %13, -1
  %15 = load %struct.dc390_srb*, %struct.dc390_srb** %4, align 8
  %16 = getelementptr inbounds %struct.dc390_srb, %struct.dc390_srb* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = and i32 %19, %14
  store i32 %20, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
